--- a/pom.xml
+++ b/pom.xml
@@ -184,5 +184,10 @@
             <artifactId>jquery</artifactId>
             <version>1.12.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>chartjs</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 </project>
