--- a/pom.xml
+++ b/pom.xml
@@ -189,5 +189,10 @@
             <artifactId>chartjs</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>github-com-danvk-dygraphs</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 </project>
