--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>be.ugent.idlab.tcbl</groupId>
     <artifactId>UserDataManager</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0.1-RELEASE</version>
     <packaging>jar</packaging>
 
     <name>UserDataManager</name>
